# mpi_hello_world

./: CMakeLists.txt  Containerfile
.docker/: image_name
.podman/: image_name
